[package]
name = "miami_procedure"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
zela-std.workspace = true
serde.workspace = true
log.workspace = true

solana-sdk.workspace = true
borsh = "1.6.1"
spl-memo = "6.0.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
solana-client = "2.2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
env_logger = { version = "0.11" }
