[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "base58>=2.1.1",
    "httpx>=0.28.1",
    "solana>=0.36.11",
    "solders>=0.27.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]

[tool.ruff.format]
indent-style = "tab"
